syntax = "proto3";

package base;

option go_package = "xgo/tests/pb/pbbase";

//import "google/protobuf/any.proto";
//import "google/protobuf/duration.proto";
//import "google/protobuf/timestamp.proto";
//
//import "tests/proto/cases/base/private.proto";
//
//import "tests/proto/module/external.proto";

import "proto/json.proto";

// For test the key of map is bool
message TypeMap3 {
  map<bool, string>   f_string1  = 1  [ (json.field) = { } ];
  map<bool, int32>    f_int32    = 11 [ (json.field) = { } ];
  map<bool, int64>    f_int64    = 12 [ (json.field) = { } ];
  map<bool, uint32>   f_uint32   = 13 [ (json.field) = { } ];
  map<bool, uint64>   f_uint64   = 14 [ (json.field) = { } ];
  map<bool, sint32>   f_sint32   = 15 [ (json.field) = { } ];
  map<bool, sint64>   f_sint64   = 16 [ (json.field) = { } ];
  map<bool, sfixed32> f_sfixed32 = 17 [ (json.field) = { } ];
  map<bool, sfixed64> f_sfixed64 = 18 [ (json.field) = { } ];
  map<bool, fixed32>  f_fixed32  = 19 [ (json.field) = { } ];
  map<bool, fixed64>  f_fixed64  = 20 [ (json.field) = { } ];
  map<bool, bool>     f_bool     = 21 [ (json.field) = { } ];
}
